deploy on gh-pages branch

--- a/_config.yml
+++ b/_config.yml
@@ -104,5 +104,5 @@ theme: fluid
 deploy:
   type: git
   repo: git@github.com:Wh1isper/wh1isper.github.io.git
-  branch: master
+  branch: gh-pages
 
