--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
+  - "googlec5a2a89a2b347b1d.html"
 
 # Writing
 new_post_name: :title.md # File name of new posts
