--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Wh1isper's Blog
-subtitle: "Wh1ipser's Blog"
+subtitle: "Wh1isper's Blog"
 description: "Wh1isper的技术博客，专注于LLM、AI Agent、Coding Agent、软件架构、数据可观测性等技术领域的深度分享与思考"
 keywords:
   - LLM
