--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -63,8 +63,8 @@ code:
       # 在链接中挑选 style 填入
       # Select a style in the link
       # See: https://highlightjs.org/static/demo/
-      style: "atom-one-light"
-      style_dark: "atom-one-dark"
+      style: "github"
+      style_dark: "github-dark"
 
     prismjs:
       # 在下方链接页面右侧的圆形按钮挑选 style 填入，也可以直接填入 css 链接
@@ -87,7 +87,7 @@ fun_features:
 
     # 打印速度，数字越大越慢
     # Typing speed, the larger the number, the slower
-    typeSpeed: 70
+    typeSpeed: 52
 
     # 游标字符
     # Cursor character
@@ -119,7 +119,7 @@ fun_features:
   progressbar:
     enable: true
     height_px: 3
-    color: "#29d"
+    color: "#3b82f6"
     # See: https://github.com/rstacruz/nprogress
     options: { showSpinner: false, trickleSpeed: 100 }
 
@@ -138,79 +138,79 @@ dark_mode:
 color:
   # body 背景色
   # Color of body background
-  body_bg_color: "#eee"
+  body_bg_color: "#f8fafc"
   # 暗色模式下的 body 背景色，下同
   # Color in dark mode, the same below
-  body_bg_color_dark: "#181c27"
+  body_bg_color_dark: "#0f172a"
 
   # 顶部菜单背景色
   # Color of navigation bar background
-  navbar_bg_color: "#9f9890"
-  navbar_bg_color_dark: "#9f9890"
+  navbar_bg_color: "#1e293b"
+  navbar_bg_color_dark: "#0b1220"
 
   # 顶部菜单字体色
   # Color of navigation bar text
-  navbar_text_color: "#fff"
-  navbar_text_color_dark: "#d0d0d0"
+  navbar_text_color: "#e2e8f0"
+  navbar_text_color_dark: "#cbd5e1"
 
   # 副标题字体色
   # Color of navigation bar text
-  subtitle_color: "#fff"
-  subtitle_color_dark: "#d0d0d0"
+  subtitle_color: "#e2e8f0"
+  subtitle_color_dark: "#cbd5e1"
 
   # 全局字体色
   # Color of global text
-  text_color: "#3c4858"
-  text_color_dark: "#c4c6c9"
+  text_color: "#334155"
+  text_color_dark: "#cbd5e1"
 
   # 全局次级字体色（摘要、简介等位置）
   # Color of global secondary text (excerpt, introduction, etc.)
-  sec_text_color: "#718096"
-  sec_text_color_dark: "#a7a9ad"
+  sec_text_color: "#64748b"
+  sec_text_color_dark: "#94a3b8"
 
   # 主面板背景色
   # Color of main board
-  board_color: "#fff"
-  board_color_dark: "#252d38"
+  board_color: "#ffffff"
+  board_color_dark: "#1e293b"
 
   # 文章正文字体色
   # Color of post text
-  post_text_color: "#2c3e50"
-  post_text_color_dark: "#c4c6c9"
+  post_text_color: "#1e293b"
+  post_text_color_dark: "#cbd5e1"
 
   # 文章正文字体色（h1 h2 h3...）
   # Color of Article heading (h1 h2 h3...)
-  post_heading_color: "#1a202c"
-  post_heading_color_dark: "#c4c6c9"
+  post_heading_color: "#0f172a"
+  post_heading_color_dark: "#e2e8f0"
 
   # 文章超链接字体色
   # Color of post link
-  post_link_color: "#0366d6"
-  post_link_color_dark: "#1589e9"
+  post_link_color: "#2563eb"
+  post_link_color_dark: "#60a5fa"
 
   # 超链接悬浮时字体色
   # Color of link when hovering
-  link_hover_color: "#30a9de"
-  link_hover_color_dark: "#30a9de"
+  link_hover_color: "#3b82f6"
+  link_hover_color_dark: "#93c5fd"
 
   # 超链接悬浮背景色
   # Color of link background when hovering
-  link_hover_bg_color: "#f8f9fa"
-  link_hover_bg_color_dark: "#364151"
+  link_hover_bg_color: "#eff6ff"
+  link_hover_bg_color_dark: "#1f2937"
 
   # 分隔线和表格边线的颜色
   # Color of horizontal rule and table border
-  line_color: "#eaecef"
-  line_color_dark: "#435266"
+  line_color: "#e2e8f0"
+  line_color_dark: "#334155"
 
   # 滚动条颜色
   # Color of scrollbar
-  scrollbar_color: "#c4c6c9"
-  scrollbar_color_dark: "#687582"
+  scrollbar_color: "#94a3b8"
+  scrollbar_color_dark: "#475569"
   # 滚动条悬浮颜色
   # Color of scrollbar when hovering
-  scrollbar_hover_color: "#a6a6a6"
-  scrollbar_hover_color_dark: "#9da8b3"
+  scrollbar_hover_color: "#64748b"
+  scrollbar_hover_color_dark: "#64748b"
 
   # 按钮背景色
   # Color of button
@@ -218,15 +218,15 @@ color:
   button_bg_color_dark: "transparent"
   # 按钮悬浮背景色
   # Color of button when hovering
-  button_hover_bg_color: "#f2f3f5"
-  button_hover_bg_color_dark: "#46647e"
+  button_hover_bg_color: "#e2e8f0"
+  button_hover_bg_color_dark: "#334155"
 
 # 主题字体配置
 # Font
 font:
-  font_size: 16px
-  font_family:
-  letter_spacing: 0.02em
+  font_size: 17px
+  font_family: "-apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Noto Sans SC', sans-serif"
+  letter_spacing: 0.01em
   code_font_size: 85%
 
 # 指定自定义 .js 文件路径，支持列表；路径是相对 source 目录，如 /js/custom.js 对应存放目录 source/js/custom.js
@@ -236,6 +236,7 @@ custom_js:
 # 指定自定义 .css 文件路径，用法和 custom_js 相同
 # The usage is the same as custom_js
 custom_css:
+  - /css/custom.css
 
 # 网页访问统计
 # Analysis of website visitors
